unpackaged/main/default/objects/On_site_agreement__c/fields/Property_address_postcode__c.field-meta.xml
<CustomField>
    <fullName>Property_address_postcode__c</fullName>
    <label>Property address postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>