unpackaged/main/default/objects/On_site_agreement__c/fields/Purchase_Order_Detail_s__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Detail_s__c</fullName>
    <description>Details of all the Purchase Orders associated with this ON Site Agreement / its associated Work Order</description>
    <inlineHelpText>Details of all the Purchase Orders associated with this ON Site Agreement / its associated Work Order</inlineHelpText>
    <label>Purchase Order Detail(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>