unpackaged/main/default/objects/On_site_agreement__c/fields/Raised_by_Engineer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_Engineer_Formula__c</fullName>
    <description>The name of the Service Resource/Operative who raised the On Site Agreement</description>
    <formula>Raised_by_Service_Resource_ID__r.Name</formula>
    <inlineHelpText>The name of the Service Resource/Operative who raised the On Site Agreement</inlineHelpText>
    <label>Raised by (Engineer)</label>
    <type>Text</type>
</CustomField>