unpackaged/main/default/objects/On_site_agreement__c/fields/Raised_by_Service_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_Service_Resource_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised by Service Resource ID</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>On Site Agreements (Raised by)</relationshipLabel>
    <relationshipName>On_Site_Agreements_Raised_by</relationshipName>
    <type>Lookup</type>
</CustomField>