unpackaged/main/default/objects/On_site_agreement__c/fields/Reason_of_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_rejection__c</fullName>
    <label>Reason of rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>