unpackaged/main/default/objects/On_site_agreement__c/fields/Rejected_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked when the Rejected Customer Email has been sent (with or without a discount)</description>
    <inlineHelpText>To be ticked when the Rejected Customer Email has been sent (with or without a discount)</inlineHelpText>
    <label>Rejected Email Sent?</label>
    <type>Checkbox</type>
</CustomField>