unpackaged/main/default/objects/On_site_agreement__c/fields/Required_Fields_to_Create_SA_Completed__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_to_Create_SA_Completed__c</fullName>
    <formula>IF(

AND
(
ISBLANK(Materials_supplied_by_Aspect_details_New__c)=FALSE,
ISBLANK(Materials_supplied_by_operative_detailsN__c)=FALSE,
ISBLANK(Materials_collection_pt_name_address_New__c)=FALSE,
ISBLANK(PO_Number__c)=FALSE
),
TRUE,
FALSE
)</formula>
    <label>Required Fields to Create SA Completed</label>
    <type>Checkbox</type>
</CustomField>