unpackaged/main/default/objects/On_site_agreement__c/fields/Review_Obtained_By__c.field-meta.xml
<CustomField>
    <fullName>Review_Obtained_By__c</fullName>
    <label>Review Obtained By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Obtained_By</valueSetName>
    </valueSet>
</CustomField>