unpackaged/main/default/objects/On_site_agreement__c/fields/Review_Obtained_by_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Review_Obtained_by_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Obtained by Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>On Site Agreements (Review Obtained by Engineer)</relationshipLabel>
    <relationshipName>On_Site_Agreements_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>