unpackaged/main/default/objects/On_site_agreement__c/fields/Review_Obtained_by_Office__c.field-meta.xml
<CustomField>
    <fullName>Review_Obtained_by_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Obtained by Office</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements5</relationshipName>
    <type>Lookup</type>
</CustomField>