unpackaged/main/default/objects/On_site_agreement__c/fields/Scaffolding_Charge__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_Charge__c</fullName>
    <label>Scaffolding Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>