unpackaged/main/default/objects/On_site_agreement__c/fields/Scaffolding_image_2__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_image_2__c</fullName>
    <label>Scaffolding image 2</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>