unpackaged/main/default/objects/On_site_agreement__c/fields/Scheduled_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_date__c</fullName>
    <label>Scheduled date</label>
    <type>DateTime</type>
</CustomField>