unpackaged/main/default/objects/On_site_agreement__c/fields/Scheduled_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Email Sent</label>
    <type>Checkbox</type>
</CustomField>