unpackaged/main/default/objects/On_site_agreement__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <formula>TIMEVALUE( Scheduled_date__c+0.041666667 )</formula>
    <label>Scheduled Time</label>
    <type>Time</type>
</CustomField>