unpackaged/main/default/objects/On_site_agreement__c/fields/Scope_of_work_accurate__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_work_accurate__c</fullName>
    <label>Scope of work accurate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>