unpackaged/main/default/objects/On_site_agreement__c/fields/Scope_of_work_amended__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_work_amended__c</fullName>
    <label>Scope of work amended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>