unpackaged/main/default/objects/On_site_agreement__c/fields/Second_trade_required__c.field-meta.xml
<CustomField>
    <fullName>Second_trade_required__c</fullName>
    <label>Second trade required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>