unpackaged/main/default/objects/On_site_agreement__c/fields/Siclops_Checks_temp__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Checks_temp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hollie: is it possible to add a tickbox that says ‘Siclops Checks’ to the main on site agreement screen, so that once I have allocated the engineer, sent a requesition and done everything that needs doing on siclops I can check the box</description>
    <inlineHelpText>To be ticked when: Engineer allocated, sent a requisition and done everything that needs doing on siclops</inlineHelpText>
    <label>Siclops Checks (temp)</label>
    <type>Checkbox</type>
</CustomField>