unpackaged/main/default/objects/On_site_agreement__c/fields/Signature_final_customer__c.field-meta.xml
<CustomField>
    <fullName>Signature_final_customer__c</fullName>
    <label>Signature final customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>