unpackaged/main/default/objects/On_site_agreement__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>On Site Agreements</relationshipLabel>
    <relationshipName>On_Site_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>