unpackaged/main/default/objects/On_site_agreement__c/fields/Specifications_Mats_suppliers__c.field-meta.xml
<CustomField>
    <fullName>Specifications_Mats_suppliers__c</fullName>
    <label>Specifications (Mats/suppliers)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>