unpackaged/main/default/objects/On_site_agreement__c/fields/Subtotal_charge__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_charge__c</fullName>
    <label>Subtotal charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>