unpackaged/main/default/objects/On_site_agreement__c/fields/Test_formula__c.field-meta.xml
<CustomField>
    <fullName>Test_formula__c</fullName>
    <formula>IF( Site__r.Account__r.Record_Type_Name__c =&#39;Commercial&#39;,Site__r.Account__r.Name &amp;BR(),&quot;&quot;)&amp;
IF( ISBLANK(Site__r.Site_Street__c) , &quot;&quot;,Site__r.Site_Street__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_City__c) , &quot;&quot;,Site__r.Site_City__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_State__c) , &quot;&quot;,Site__r.Site_State__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_PostalCode__c) ,&quot;&quot;, Site__r.Site_PostalCode__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_Country__c) ,&quot;&quot;, Site__r.Site_Country__c &amp;BR() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test formula</label>
    <type>Text</type>
</CustomField>