unpackaged/main/default/objects/On_site_agreement__c/fields/Testing_has_AR_Process_Builder_fired__c.field-meta.xml
<CustomField>
    <fullName>Testing_has_AR_Process_Builder_fired__c</fullName>
    <label>Testing - has AR Process Builder fired?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>