unpackaged/main/default/objects/On_site_agreement__c/fields/Total_hours_required__c.field-meta.xml
<CustomField>
    <fullName>Total_hours_required__c</fullName>
    <label>Total hours required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>