unpackaged/main/default/objects/On_site_agreement__c/fields/Total_pay_O1__c.field-meta.xml
<CustomField>
    <fullName>Total_pay_O1__c</fullName>
    <label>Total pay O1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>