unpackaged/main/default/objects/On_site_agreement__c/fields/Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received__c</fullName>
    <description>Deposit Received + Final Payment Received</description>
    <formula>BLANKVALUE(Deposit_received__c,0)+BLANKVALUE(Final_payment_received__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deposit Received + Final Payment Received</inlineHelpText>
    <label>Total Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>