unpackaged/main/default/objects/On_site_agreement__c/fields/User_Scheduled_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>User_Scheduled_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who created the Service Appointment for this record</description>
    <inlineHelpText>The User who created the Service Appointment for this record</inlineHelpText>
    <label>User Scheduled Service Appointment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements_Scheduled_Service_App</relationshipName>
    <type>Lookup</type>
</CustomField>