unpackaged/main/default/objects/On_site_agreement__c/fields/User_Scheduled_Service_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Scheduled_Service_Appointment_Date__c</fullName>
    <description>The Date /Time the User created the Service Appointment for this On site Agreement</description>
    <inlineHelpText>The Date /Time the User created the Service Appointment for this On site Agreement</inlineHelpText>
    <label>User Scheduled Service Appointment Date</label>
    <type>DateTime</type>
</CustomField>