unpackaged/main/default/objects/On_site_agreement__c/fields/User_that_Ticked_Siclops_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>User_that_Ticked_Siclops_Stage_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User that Ticked Siclops Stage 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements_Siclops_Stage_2</relationshipName>
    <type>Lookup</type>
</CustomField>