unpackaged/main/default/objects/On_site_agreement__c/fields/Who_Initially_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Who_Initially_Accepted__c</fullName>
    <label>Who Initially Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted by Customer</fullName>
            </value>
            <value>
                <fullName>Accepted by Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>