unpackaged/main/default/objects/On_site_agreement__c/fields/Who_Ticked_Complaint_Raised__c.field-meta.xml
<CustomField>
    <fullName>Who_Ticked_Complaint_Raised__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person/user who ticked the box &#39;Complaint Raised?&#39;</description>
    <inlineHelpText>The person/user who ticked the box &#39;Complaint Raised?&#39;</inlineHelpText>
    <label>Who Ticked Complaint Raised</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>