unpackaged/main/default/objects/On_site_agreement__c/fields/Who_Ticked_Complaint_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Who_Ticked_Complaint_Resolved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Ticked Complaint Resolved</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>