unpackaged/main/default/objects/On_site_agreement__c/fields/Work_Commenced_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Work_Commenced_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Operative who submitted the On Site Agreement form started the work at that moment and therefore there is no need for any office staff to create a Service Appointment.</description>
    <inlineHelpText>Indicates that the Operative who submitted the On Site Agreement form started the work at that moment and therefore there is no need for any office staff to create a Service Appointment.</inlineHelpText>
    <label>Work Commenced Immediately</label>
    <type>Checkbox</type>
</CustomField>