unpackaged/main/default/objects/On_site_agreement__c/fields/Work_completion_image_3__c.field-meta.xml
<CustomField>
    <fullName>Work_completion_image_3__c</fullName>
    <label>Work completion image 3</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>