unpackaged/main/default/objects/On_site_agreement__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>On_site_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>