unpackaged/main/default/objects/On_site_agreement__c/fields/Worldpay_deposit_ID__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_deposit_ID__c</fullName>
    <label>Worldpay deposit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>