unpackaged/main/default/objects/On_site_agreement__c/fields/Worldpay_final_ID__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_final_ID__c</fullName>
    <label>Worldpay final ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>