unpackaged/main/default/objects/On_site_agreement__c/fields/X1_if_Converted__c.field-meta.xml
<CustomField>
    <fullName>X1_if_Converted__c</fullName>
    <formula>IF(Converted__c=TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 if Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>