unpackaged/main/default/objects/On_site_agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Raised_by_Engineer_Formula__c</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>Preferred_Date_Time__c</columns>
    <columns>Work_type__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Payment_Received__c</columns>
    <columns>Final_Payment_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2021 12:00 AM</value>
    </filters>
    <label>All Records</label>
</ListView>