unpackaged/main/default/objects/On_site_agreement__c/listViews/Build_Fab_Engineer_Complete_to_Action.listView-meta.xml
<ListView>
    <fullName>Build_Fab_Engineer_Complete_to_Action</fullName>
    <columns>NAME</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Property_address_postcode__c</columns>
    <columns>Deposit_received__c</columns>
    <columns>Final_payment_received__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Siclops_Stage_1__c</columns>
    <columns>Siclops_Stage_2__c</columns>
    <columns>Final_Payment_Not_Taken_On_Site__c</columns>
    <columns>Payments_Reconciled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Payments_Reconciled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Work_type__c</field>
        <operation>contains</operation>
        <value>Roofing,Windows &amp; Doors,OSA-Electrical,Electrical,Handyman,Multi Trade,Waste Removal,Gardening,Ventilation. Air Conditioning,AC Refrigeration</value>
    </filters>
    <label>Build Fab - Engineer Complete to Action</label>
</ListView>